update deps:
+ sbt 1.3.8
+ use scalafmt
+ scalatest 3.1.0
+ checkstyle 8.29
+ change name from `sbt-checkstyle-plugin` to `sbt-checkstyle`
+ use sbt-bintray instead of sbt-sonatype
  (If use sbt-sonatype to publish then I can't download sbt-checkstyle's
   `-sources.jar` in Intellij in project using sbt-checkstyle plugin)